--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
-
 html{
   scroll-behavior: smooth;
   height:100%;
   width:100%;
 }
-
+.container{
+  max-width:100%;
+  height:100%;
+  margin:0 auto;
+}
 .section{
   padding-top:75px;
   padding-bottom:75px;
@@ -16,35 +19,141 @@ html{
   padding-top:90px;
   padding-bottom:75px;
 }
+h1{ 
+letter-spacing: 5px;
+color:white;
+text-transform: uppercase;
+font-family: Forum;
+font-style: normal;
+font-weight: normal;
+font-size: 80px;
+line-height: 90px;
 
-footer{
-background:black;
+  }
+  h2{
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    font-family: Forum;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 80px;
+    line-height: 90px; 
+   
+  }
+.h_roboto1{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 28px;
+    line-height: 33px;
+    letter-spacing: 2px;
 }
-.container{
-  width: 1440px;
+.h_roboto2{
+font-family: Roboto;
+font-style: normal;
+font-weight: 300;
+font-size: 22px;
+line-height: 26px;
+display: flex;
+align-items: center;
+text-align: center;
+letter-spacing: 2px;
+  }
+  .h_roboto3{
+font-family: Roboto;
+font-style: normal;
+font-weight: 200;
+font-size: 22px;
+line-height: 26px;
+color: #000000;
+  }
+  .h_roboto4{
+font-family: Roboto;
+font-size: 22px;
+font-style: normal;
+font-weight: 300;
+line-height: 39px;
+letter-spacing: 0em;
+text-align: left;
+  }
+  .h_roboto5{
+font-family: Roboto;
+font-style: normal;
+font-weight: 200;
+font-size: 22px;
+line-height: 26px;
+color: #000000;
+  }
+  .h_roboto6{
+font-family: Roboto;
+font-style: normal;
+font-weight: 300;
+font-size: 22px;
+line-height: 26px;
+display: flex;
+align-items: flex-end;
+  }
+  .h_forum1{
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    font-family: Forum;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 80px;
+    line-height: 90px; 
+  }
+  .h_forum2{
+    font-family: Forum;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 32px;
+    line-height: 35px;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+  } 
+  .white-title{
+  color:white;
+  text-transform: uppercase;
+  }
+  .dark-title{
+    color:black;
+    text-transform: uppercase;
+  }
+  .white_paragh{
+    color:white;
+    font-family: 'Roboto', sans-serif;
+    font-size:24px;   
+  }
+
+.header{ 
+  height: 150px;
   margin:0 auto;
-  max-width: 1920px;
+  display: flex;
+  background:black;
+  width:100%;  
 }
-.welcome-container{
+.nav-header{
+  max-width: 1440px;
+  height: 150px;
+  margin:0 auto;
   display: flex;
   flex-direction: row;
-}
-
-.header-container{
-    display:flex;
-    justify-content: space-between;
-    align-items: center; 
-    width:100%;
-    padding:30px 0px 0px 0px; 
-    margin:0px 0px 0px -109px; 
-  
-} 
-.aha{
-  width:100%;
-  display:flex;
   background:black;
 }
+.header-links1{
+ display:flex;
+ flex-direction:row;
 
+}
+.header-links2{
+  margin-left:370px;
+  padding-bottom:3px;
+}
+.img{
+  height:33px;
+  width:199px;
+  
+}
 li{
   list-style: none;
 
@@ -59,9 +168,8 @@ ul{
 }
 .link{
   color:white;
-  font-family: 'Roboto', sans-serif;
-  font-size:20px;
   text-decoration:none;
+
 }
 .link:hover{
   color:cadetblue;
@@ -70,56 +178,119 @@ ul{
   font-size:22px;
   cursor:cell;
 }
-.img{
-  padding-left:110px;
-}
-h1{
-color:white;
-font-family: 'Forum', cursive;
-  font-size:70px;
-  text-transform: uppercase;
-}
 
-.white-title{
-color:white;
-text-transform: uppercase;
-}
-.dark-title{
-  color:black;
-  text-transform: uppercase;
-}
-.white_paragh{
-  color:white;
-  font-family: 'Roboto', sans-serif;
-  font-size:24px;
+.Welcome-section{
+  height:842px;
+  width:100%;
   
+  margin:0 auto;
+  min-width:0px;
+}
+.welcome-container{
+  max-width:1440px;
+  height: 810px;
+  margin:0 auto;
+
+  flex-direction: row;
+  min-width:0;
+}
+.wrapper{
+  min-height:100%;
+  margin:-405px -93px 0px 595px ;
+  padding:0px 0px 0px 25px;
+}
+.image-slider_wrapper{
+
+}
+.image-slider_slide{
+
+}
+.image-slider_image{
+  text-align:center;
+}
+.image-slider_image img{
+  max-width:100%;
+}
+.swiper-wrapper{
+  transform:translate3d(0px,0,0);
+  position:relative;
+  width:100%;
+  height:100%;
+  z-index:1;
+}
+.swiper-slide{
+  flex-shrink:0;
+  width:100%;
+  height:100%;
+  position:relative;
+  transition-property:transform;
+
+}
+.swiper-container{
+  margin-left:auto;
+  margin-right:auto;
+  position:relative;
+  overflow: hidden;
+  list-style:none;
+  z-index:1;
+}
+.image-slider .swiper-pagination-bullet {
+  width:20px;
+  height:29px;
+  line-height:20px;
+  font-size:14px;
+  background-color:red;
+
 }
 .button{
-background:red;
 color:white;
-font-family: 'Roboto', sans-serif;
-font-size:24px;
-height:75px;
-border-radius:10px;
-}
-.mona{
-  background-position: calc(100% - 20px) 0;
-  float:right;
- margin:15px 0px 0px 150px;
-}
-.welcome{
-  height:600px;
-}
-.par_yellow{
-  color:rgb(182, 182, 9);
-  text-transform: uppercase;
-}
-.visit-container{
+width: 360px;
+height: 75px;
+left: 0px;
+top: 0px;
+background: #710707;
+border-radius: 10px;
+  }
+  .mona{
+    background-position: calc(100% - 20px) 0;
+    float:right;
+  
+  }
+  .welcome{
+    height:180;
+    width:593;
+  }
+.Visiting-section{
+  width:100%;
+  height: 1350px;
   display: flex;
+  margin:0 auto;
+}
+.visiting-container{
   max-width: 1440px;
+  height:1116px;
+  display: flex;
+  margin:0 auto;
+  flex-direction:column;
+}
+.h_visiting{
+  height:90px;
+  width:700px;
+  color:#9D8665;
+}
+.tours_images{
+  flex-direction:row;
+  display:flex;
   flex-wrap: wrap;
-  gap:120px;
- 
+  padding-right:60px;
+  padding-bottom:75px;
+}
+.tours_images_each{
+  display:flex;
+  padding: right 20px;px;
+  padding: bottom 25px;px;
+  padding-top:60px;
+  
 }
 .underline-title {
   position: relative;
@@ -127,9 +298,9 @@ border-radius:10px;
 .underline-title::after {
   content: "";
   position: absolute;
-  bottom: -25px;
+  bottom: -50px;
   left: 0;
-  width:100%;
+  width:1440px;
   height: 3px;
   background-color:darkred;
 }
@@ -145,96 +316,174 @@ border-radius:10px;
   height: 3px;
   background-color:darkred;
 }
-.first_img{
-  height:215px;
-  width:330px;
-  display:block;
-
-}
-
+ 
 .line1{
-margin:4px 0px -13px 0px;
-font-family: 'Roboto', sans-serif;
-font-size:20px;
+
+
 }
-.line2{
-font-family: 'Roboto', sans-serif;
-font-size:16px;
-}
-h3{
-  font-family: 'Forum', cursive;
-  font-size:28px;
-}
-h2{
-  font-family: 'Forum', cursive;
-  font-size:50px;
-  padding:10px 0px 0px 0px;
+.Explore-section{
+  width:100%;
+  height:865px;
+  display: flex;
+  margin:0 auto;
+
 }
 .explore-container{
-  display:flex;
+  width: 1440px;
+  height:865px;
+  margin:0 auto;
+  flex-direction:row ;
 }
 .letter{
   color:yellow;
 }
-.video-container{
-  display: flex;
-  max-width: 1440px;
-  flex-wrap: wrap;
-  gap:45px;
-  
-}
-.video{
-  flex-wrap: wrap;
-}
-.video_pictures{
- padding:0px 150px 0px 0px;
-
-}
-.title_indent{
-  padding:10px 0px 0px 0px;
-  margin:0px 0px 0px 0px;
-}
-
-.picture-container{
-  width: 1440px;
+.Video-section {
+  width:100%;
+  height:auto;
   margin:0 auto;
-  max-width: 1920px;
-  overflow-y: hidden;
-  padding-top:75px;
-  padding-bottom:20px;
+  flex-direction:column;
+  min-width:0px;
 }
-.inner-picture-container{
-  width: 1440px;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  row-gap:20px;
-  column-gap:20px;
-  height:2000px;
+.video-container{
+  max-width: 1440px;
+  height:1246px;
+  margin:0 auto;
+  flex-direction:column;
 }
+.wrapper2{
+  min-height:100%;
+  flex-direction:row;
+ 
+}
+.image-slider_wrapper2{
 
+}
+.image-slider_slide2{
+
+}
+.image-slider_image2{
+  text-align:center;
+}
+.image-slider_image2 {
+  max-width:480px;
+}
+.swiper-wrapper2{
+  transform:translate3d(0px,0,0);
+  position:relative;
+  width:100%;
+  height:100%;
+  z-index:1;
+}
+.swiper-slide2{
+  flex-shrink:0;
+  max-width:480px;
+  height:100%;
+  position:relative;
+  transition-property:transform;
+
+}
+.swiper-container2{
+  margin-left:auto;
+  margin-right:auto;
+  position:relative;
+  overflow: hidden;
+  list-style:none;
+  z-index:1;
+}
+.image-slider2 .swiper-pagination2-bullet {
+  width:20px;
+  height:29px;
+  line-height:20px;
+  font-size:14px;
+  background-color:red;
+
+}
+.h_video1{ 
+  width:605px;
+  height:90px;
+  color:#9D8665;
+}
+.h_video2{
+  width:720px;
+  height:90px; 
+  color: #000000;
+}
+.video_pictures1{
+  display:flex;
+  flex-wrap: wrap;
+}
+.video_pictures2{
+  display:flex;
+  width:1440px;
+  height:254px;
+}
+.v-pict-style{
+  padding-top:40px;
+  padding-right:42px;
+
+}
+.Gallery-section{
+  width:100%;
+  height:2200px;
+  display: flex;
+  margin:0 auto;
+}
+.gallery-container{
+  max-width: 1440px;
+  height:2200px;
+  margin:0 auto;
+  display: flex;
+  flex-direction:column;
+}
+.gallery_pictures{
+  overflow: hidden;
+}
 
 .white{
   color:white;
 }
-.title{
-  padding:0px 0px 0px 165px;
-  max-width: 1440px;
-}
 
+.Tickets-section{
+  max-width:100%;
+  height:893px;
+  margin:0 auto;
+  
+}
 .tickets-container{
-  display: flex;
-  flex-direction: row;
-}
-.img_tickets{
-  padding-top:40px;
-  width: 1920px;
+  width: 1440px;
+  height:743px;
+  margin:0 auto;
+  flex-direction:column;
+  
 }
 
-.ticket_type{
-  padding:0px 0px 0px 30px;
-  width:400px;
-  height:100%;
+.button-tickets{
+  
+  width: 175px;
+  height: 50px;
+ color:white;
+  background-color: black;
+}
+.h_tickets{
+  height:90px;
+  width:472px;
+  color:#9D8665;
+}
+.buy-tickets{
+  display:flex;
+  flex-direction:row;
+}
+.ticket-type{
+  display:flex;
+  flex-direction:column;
+}
+
+.parallax{
+  height:400px;
+  width:100%;
+  background:url(assets/img/par.jpg);
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 .container2 {
@@ -291,17 +540,87 @@ h2{
   width: 3em;
   text-align: center;
 }
+.modal{
+  display:none;
+  position:fixed;
+  z-index:1;
+  left:0;
+  top:0;
+  height:100%;
+  width:100%;
+  overflow:auto;
+  background-color:rgb(0,0,0,0.8);
+}
+.modal-content{
+  background-color:#fefefe;
+  margin:15% auto;
+  padding:20px;
+  border:1px solid #888;
+  max-width:1440px;
+  min-height:825px;
 
-.contact-container{
+}
+.close{
+  float:right;
+  color:#aaa;
+  font-size:28px;
+  font-weight:bold;
+}
+.button_tickets{
+  background-color:rgb(0,0,0);
+  color:#fefefe;
+  width:175px;
+  height:50px;
+}
+.booking_tickets{
+font-family: Forum;
+font-size: 50px;
+font-style: normal;
+font-weight: 400;
+line-height: 55px;
+letter-spacing: 0em;
+text-align: left;
+color: #9D8665;
+}
+.tourto_louvre{
+font-family: Roboto;
+font-style: normal;
+font-weight: normal;
+font-size: 18px;
+line-height: 21px;
+color: #710707;
+
+}
+
+
+.Contacts-section{
+  width:100%;
+  height:959px;
   display: flex;
-  flex-direction: row;
+  margin:0 auto;
 }
-.margin{
-  padding:0px 0px 0px 0px;
+.contacts-container{
+  max-width: 1440px;
+  height:813px;
+  margin:0 auto;
+  display: flex;
+  flex-direction:column;
 }
-.contact_link{
-  color:grey;
+.h_contacts{
+  width: 397px;
+  height:90px;
+  color:#9D8665;
 }
+.div-container1{
+display:flex;
+flex-direction:row;
+}
+
+.div-container2{
+  display:flex;
+  flex-direction:row;
+}
+
 .contact_link:hover{
 color:lightcoral;
 text-decoration:underline lightsalmon;
@@ -311,19 +630,32 @@ text-decoration:underline lightsalmon;
  
 }
 .footer{
-  display:flex;
-  flex-direction: row;
-  max-width:1440px;
+  width:100%;
+  height:392px;
+  display: flex;
+  margin:0 auto;
   background:black;
-  height:100px;
 }
-.footer_img{
-  padding:0px 125px 0px 0px;
+.nav-footer{
+  max-width: 1440px;
+  height:392px;
+  margin:0 auto;
+  display: flex;
+  flex-direction:column;
+}
+.logo{
+  height:50px;
+  width:195px;
+}
+.footer-row{
+  display: flex;
+  flex-direction:row;
 }
 .footer_column{
   flex-direction: column;
-  row-gap: 10px;
-  column-gap: 20px;
+  margin-right:50px;
+  height:128px;
+  width:107px;
   
   
 }
@@ -331,15 +663,14 @@ text-decoration:underline lightsalmon;
   align-self:start;
 }
 hr{
-  width:100%;
+  width:1920px;
   color:grey;
   height:2px;
 }
 .footer2{
   display:flex;
   flex-direction: row;
-  max-width:1440px;
-  height: 100px;
+ 
 }
 hr{
   color:red;
@@ -352,9 +683,17 @@ hr{
 }
 .text-decor{
   text-decoration:none;
+  font-family: Roboto;
+font-style: normal;
+font-weight: 300;
+font-size: 22px;
+line-height: 26px;
 }
+
 .social{
-  display:flex;
+  height:48px;
+  width:340px;
+  margin-right:0px;
 }
 
 .circle {
@@ -362,8 +701,85 @@ hr{
   height:30px;
   border-radius: 50%;
   border:2px solid white;
+
 }
 .circle:hover{
   border:2px solid greenyellow;
   cursor:progress;
 }
+@media (max-width: 1920px) {
+  
+}
+@media (max-width: 1024px) {
+  .header{
+    display:none;
+  }
+  body {
+    overflow-x: hidden;
+    }
+  .mona{
+    max-width: 100%;
+    height: auto;
+  }
+  .section{
+    padding-top:0px;
+    padding-bottom:0px;
+  }
+  h1{
+    font-size:50px;
+  }
+  h2{
+    font-size:50px;
+  }
+  .button{
+    width:300px;
+    height:60px;
+  }
+  .tours_images_each{
+    width:330px;
+    height:215px;
+    
+  }
+  .video_pictures1{
+    max-width: 100%;
+    height: auto;
+  }
+
+.video_pictures2{
+    max-width: 100%;
+    height: auto;
+  }
+  .h_forum2{
+    font-size:28px;
+    letter-spacing: 0px;
+  }
+  .par_1{
+    display:none;
+  }
+  .par_3{
+    display:none;
+  }
+  .big_picture{
+    width:984px;
+    height:504px;
+  }
+  .small_pictures{
+    width:300px;
+    height:170px;
+  }
+  
+  
+}
+@media (max-width: 768px) {
+  
+}
+@media  (max-width: 420px) {
+  
+}
+
+
+
+   
+    
+  
+  
