--- a/style.css
+++ b/style.css
@@ -250,6 +250,7 @@ left: 0px;
 top: 0px;
 background: #710707;
 border-radius: 10px;
+justify-content: center;
   }
   .mona{
     background-position: calc(100% - 20px) 0;
@@ -263,7 +264,7 @@ border-radius: 10px;
 .Visiting-section{
   width:100%;
   height: 1350px;
-  display: flex;
+  position:realtive;
   margin:0 auto;
 }
 .visiting-container{
@@ -282,13 +283,12 @@ border-radius: 10px;
   flex-direction:row;
   display:flex;
   flex-wrap: wrap;
-  padding-right:60px;
-  padding-bottom:75px;
+  
 }
 .tours_images_each{
   display:flex;
-  padding: right 20px;px;
-  padding: bottom 25px;px;
+  padding-right:40px;
+  padding-bottom:25px;
   padding-top:60px;
   
 }
@@ -312,19 +312,27 @@ border-radius: 10px;
   position: absolute;
   bottom: -25px;
   left: 0;
-  width:65%;
+  width:50%;
+  height: 3px;
+  background-color:darkred;
+}
+.underline-title3 {
+  position: relative;
+}
+.underline-title3::after {
+  content: "";
+  position: absolute;
+  bottom: -50px;
+  left: 0;
+  width:660px;
   height: 3px;
   background-color:darkred;
 }
  
-.line1{
-
-
-}
 .Explore-section{
   width:100%;
   height:865px;
-  display: flex;
+  position:relative;
   margin:0 auto;
 
 }
@@ -332,7 +340,45 @@ border-radius: 10px;
   width: 1440px;
   height:865px;
   margin:0 auto;
-  flex-direction:row ;
+  position:relative;
+}
+.pic_explore{
+position:absolute;
+right:10px;
+top:-10px;
+}
+
+
+.img-comp-container {
+  position: relative;
+  height: 200px;
+  
+}
+
+.img-comp-img {
+  position: absolute;
+  width: auto;
+  height: auto;
+  overflow: hidden;
+  right:10px;
+  top:-450px;
+}
+
+.img-comp-img img {
+  display: block;
+  vertical-align: middle;
+}
+
+.img-comp-slider {
+  position: absolute;
+  z-index: 9;
+  cursor: ew-resize;
+  /*set the appearance of the slider:*/
+  width: 40px;
+  height: 40px;
+  background-color: #2196F3;
+  opacity: 0.7;
+  border-radius: 50%;
 }
 .letter{
   color:yellow;
@@ -447,22 +493,24 @@ border-radius: 10px;
   max-width:100%;
   height:893px;
   margin:0 auto;
+  position:relative;
   
 }
 .tickets-container{
   width: 1440px;
   height:743px;
   margin:0 auto;
-  flex-direction:column;
+  position:relative;
   
 }
-
-.button-tickets{
-  
-  width: 175px;
-  height: 50px;
- color:white;
-  background-color: black;
+.button_tickets{
+  background-color:rgb(0,0,0);
+  color:#fefefe;
+  width:175px;
+  height:50px;
+  position:absolute;
+  right:84px;
+  bottom:180px;
 }
 .h_tickets{
   height:90px;
@@ -474,8 +522,8 @@ border-radius: 10px;
   flex-direction:row;
 }
 .ticket-type{
-  display:flex;
-  flex-direction:column;
+  position:absolute;
+  left:780px;
 }
 
 .parallax{
@@ -558,7 +606,7 @@ border-radius: 10px;
   border:1px solid #888;
   max-width:1440px;
   min-height:825px;
-
+ position:relative;
 }
 .close{
   float:right;
@@ -592,19 +640,18 @@ color: #710707;
 
 }
 
-
 .Contacts-section{
   width:100%;
   height:959px;
-  display: flex;
+  position:relative;
   margin:0 auto;
 }
 .contacts-container{
   max-width: 1440px;
   height:813px;
   margin:0 auto;
-  display: flex;
-  flex-direction:column;
+  position:relative;
+ 
 }
 .h_contacts{
   width: 397px;
@@ -617,8 +664,8 @@ flex-direction:row;
 }
 
 .div-container2{
-  display:flex;
-  flex-direction:row;
+ position:absolute;
+ right:10px;
 }
 
 .contact_link:hover{
@@ -656,7 +703,6 @@ text-decoration:underline lightsalmon;
   margin-right:50px;
   height:128px;
   width:107px;
-  
   
 }
 .footer_pic{
@@ -707,75 +753,7 @@ line-height: 26px;
   border:2px solid greenyellow;
   cursor:progress;
 }
-@media (max-width: 1920px) {
-  
-}
-@media (max-width: 1024px) {
-  .header{
-    display:none;
-  }
-  body {
-    overflow-x: hidden;
-    }
-  .mona{
-    max-width: 100%;
-    height: auto;
-  }
-  .section{
-    padding-top:0px;
-    padding-bottom:0px;
-  }
-  h1{
-    font-size:50px;
-  }
-  h2{
-    font-size:50px;
-  }
-  .button{
-    width:300px;
-    height:60px;
-  }
-  .tours_images_each{
-    width:330px;
-    height:215px;
-    
-  }
-  .video_pictures1{
-    max-width: 100%;
-    height: auto;
-  }
 
-.video_pictures2{
-    max-width: 100%;
-    height: auto;
-  }
-  .h_forum2{
-    font-size:28px;
-    letter-spacing: 0px;
-  }
-  .par_1{
-    display:none;
-  }
-  .par_3{
-    display:none;
-  }
-  .big_picture{
-    width:984px;
-    height:504px;
-  }
-  .small_pictures{
-    width:300px;
-    height:170px;
-  }
-  
-  
-}
-@media (max-width: 768px) {
-  
-}
-@media  (max-width: 420px) {
-  
-}
 
 
 
