--- a/style.css
+++ b/style.css
@@ -397,7 +397,7 @@ top:-10px;
   flex-direction:column;
 }
 .wrapper2{
-  min-height:100%;
+  height:350px;
   flex-direction:row;
  
 }
@@ -474,15 +474,26 @@ top:-10px;
   display: flex;
   margin:0 auto;
 }
-.gallery-container{
+.picture-container{
   max-width: 1440px;
   height:2200px;
   margin:0 auto;
-  display: flex;
-  flex-direction:column;
+  overflow:hidden;
+ 
 }
-.gallery_pictures{
-  overflow: hidden;
+.picture-inner-container{
+
+ 
+}
+.columns{
+  column-count: 3;
+  column-width: 200px;
+  column-gap:100px;
+  row-gap: 100px;
+ 
+}
+.pi{
+  margin-bottom
 }
 
 .white{
